--- a/README.html
+++ b/README.html
@@ -380,8 +380,7 @@ summary {
 <li>Add a file of some kind to your repository, or make changes to this readme</li>
 <li>Check the status of your repository</li>
 <li>Add and commit your changes, then push back to <em>your forked repository</em> 7.XYZZZ</li>
-<li>Jesus Christ</li>
-<li>Testinh the stuff ## Other To-Dos Today:</li>
+<li>Jesus Christ 9.Yes Testinh the stuff ## Other To-Dos Today:</li>
 </ol>
 <ul>
 <li>Initialize a local git repository, then add it to GitHub</li>
